Change header title from 'TASKS ☀️' to 'Tasks'

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="main-content" @touchstart="handleTouchStart" @touchend="handleTouchEnd">
       
       <div class="app-header">
-          <h1 class="app-title">TASKS ☀️</h1>
+          <h1 class="app-title">Tasks</h1>
           <button class="btn-theme-toggle" @click="toggleDarkMode" title="Switch Theme">
               <span class="material-icons-round">{{ darkMode ? 'light_mode' : 'dark_mode' }}</span>
           </button>
